# zapret-fake-generator

./: Cargo.toml
src/: main.rs
