[package]
name = "zapret-fake-generator"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/self-related/zapret-fake-generator"

[dependencies]
quinn = "0.11.11"
rustls = "0.23.42"
rustls-platform-verifier = "0.7.0"
tokio = { version = "1.53.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
